--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -175,6 +175,17 @@
   display: block;
 }
 
+.id {
+  color: var(--theme-staking-stake-pool-tooltip-text-color);
+  font-family: var(--font-medium);
+  font-size: 10px;
+  line-height: 14px;
+  margin: -2px 0 6px;
+  opacity: 0.5;
+  padding: 3px 0;
+  word-break: break-all;
+}
+
 .name {
   color: var(--theme-staking-stake-pool-tooltip-text-color);
   font-family: var(--font-semibold);
