--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -177,12 +177,12 @@
 
 .id {
   color: var(--theme-staking-stake-pool-tooltip-text-color);
-  cursor: default;
+  cursor: pointer;
   font-family: var(--font-medium);
   font-size: 10px;
   height: 14px;
   line-height: 14px;
-  margin: -8px 0 8px;
+  margin: -8px 0 12px;
   padding: 3px 0;
   word-break: break-all;
 
@@ -190,16 +190,23 @@
     opacity: 0.5;
     overflow: hidden;
     padding-top: 3px;
+    position: absolute;
+    transition: opacity 0s;
+    transition-delay: 0s;
     white-space: nowrap;
   }
 
   .hoverContent {
     background: var(--theme-staking-stake-pool-tooltip-id-background-color);
-    display: none;
+    box-shadow: 1px 6px 6px var(--theme-staking-stake-pool-tooltip-id-shadow-1);
+    height: 20px;
     left: 0;
+    opacity: 0;
     padding: 3px 20px 5px;
     position: absolute;
     right: 0;
+    transition: opacity 0s, height 0.25s;
+    transition-delay: 0s;
     user-select: none;
 
     svg {
@@ -222,29 +229,17 @@
         width: auto;
       }
     }
-
-    &:after {
-      background: linear-gradient(
-        to bottom,
-        var(--theme-staking-stake-pool-tooltip-id-shadow-1),
-        var(--theme-staking-stake-pool-tooltip-id-shadow-2)
-      );
-      content: '';
-      display: block;
-      height: 70px;
-      left: 0;
-      margin-top: 5px;
-      position: absolute;
-      width: 100%;
-    }
   }
 
   &:hover {
     .ellipsisContent {
-      display: none;
+      opacity: 0;
+      transition-delay: 0.25s;
     }
     .hoverContent {
-      display: block;
+      height: 36px;
+      opacity: 1;
+      transition-delay: 0.25s;
     }
   }
 }
