--- a/source/renderer/app/components/wallet/WalletRestoreDialog.scss
+++ b/source/renderer/app/components/wallet/WalletRestoreDialog.scss
@@ -72,6 +72,58 @@
         line-height: 1.38;
         margin-top: 10px;
       }
+
+      .spendingPasswordField {
+        display: flex;
+
+        .tooltip {
+          &:hover {
+            .infoIcon {
+              opacity: 0.8;
+            }
+          }
+        }
+
+        :global .WalletCreateDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+          height: 12px;
+          left: -145px;
+          top: 5px;
+          width: 12px;
+        }
+
+        :global .InlineEditingDropdown-tooltip_bubble {
+          border-radius: 10px;
+          height: 87px;
+          left: 125px;
+          top: 54px;
+          white-space: normal;
+          width: 291.5px;
+
+          span[data-bubble-arrow]:before,
+          span[data-bubble-arrow]:after {
+            left: -4%;
+            top: 42%;
+            transform: rotate(90deg);
+          }
+        }
+
+        .infoIcon {
+          height: 14px;
+          margin-left: 6px;
+          opacity: 0.4;
+          transform: translateY(2px);
+          width: 14px;
+
+          path {
+            fill: var(--theme-input-icon-background-color);
+          }
+        }
+
+        :global .PasswordInput_root.spendingPassword,
+        :global .PasswordInput_root.repeatedPassword {
+          width: 100%;
+        }
+      }
     }
   }
 
