--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -3,6 +3,15 @@
 
 .dialog {
   font-family: var(--font-light);
+
+  :global .Dialog_title {
+    margin-bottom: 0;
+  }
+
+  :global .Dialog_content {
+    padding-top: 25px;
+  }
+
   .spendingPasswordFields {
     transition: all 400ms ease;
 
@@ -16,6 +25,58 @@
       font-family: var(--font-light);
       line-height: 1.38;
       margin-top: 10px;
+    }
+
+    .spendingPasswordField {
+      display: flex;
+
+      .tooltip {
+        &:hover {
+          .infoIcon {
+            opacity: 0.8;
+          }
+        }
+      }
+
+      :global .ChangeSpendingPasswordDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+        height: 12px;
+        left: -73px;
+        top: 4px;
+        width: 12px;
+      }
+
+      :global .InlineEditingDropdown-tooltip_bubble {
+        border-radius: 10px;
+        height: 87px;
+        left: 125px;
+        top: 54px;
+        white-space: normal;
+        width: 291.5px;
+
+        span[data-bubble-arrow]:before,
+        span[data-bubble-arrow]:after {
+          left: -4%;
+          top: 42%;
+          transform: rotate(90deg);
+        }
+      }
+
+      .infoIcon {
+        height: 14px;
+        margin-left: 6px;
+        opacity: 0.4;
+        transform: translateY(2px);
+        width: 14px;
+
+        path {
+          fill: var(--theme-input-icon-background-color);
+        }
+      }
+
+      :global .PasswordInput_root.spendingPassword,
+      :global .PasswordInput_root.repeatedPassword {
+        width: 100%;
+      }
     }
   }
 
