--- a/source/renderer/app/themes/overrides/CheckboxOverrides.scss
+++ b/source/renderer/app/themes/overrides/CheckboxOverrides.scss
@@ -6,6 +6,7 @@
     &::after {
       height: calc(22 / 2 * 1px);
       margin-left: 1px;
+      margin-top: var(--rp-checkbox-check-vertical-offset, -2px);
       width: calc(22 / 5 * 1px);
     }
   }
