--- a/source/renderer/app/components/staking/delegation-center/UndelegateConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/delegation-center/UndelegateConfirmationDialog.scss
@@ -42,7 +42,7 @@
     margin-bottom: 20px;
 
     .calculatingFeesLabel {
-      @include animated-ellipsis($width: 20px);
+      @include animated-ellipsis($duration: 1500, $width: 20px);
       --webkit-backface-visibility: hidden;
     }
 
