--- a/source/renderer/app/components/wallet/skins/AmountInputSkin.scss
+++ b/source/renderer/app/components/wallet/skins/AmountInputSkin.scss
@@ -16,7 +16,7 @@
 }
 
 .calculatingFees {
-  @include animated-ellipsis($width: 20px);
+  @include animated-ellipsis($duration: 1500, $width: 20px);
 }
 
 .total {
