[DDW-317]: Implement data availability check handler on stake pools

--- a/source/renderer/app/components/staking/widgets/ThumbSelectedPool.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbSelectedPool.scss
@@ -73,3 +73,11 @@
     }
   }
 }
+
+.sandClockIcon {
+  path {
+    stroke: var(--theme-staking-stake-pool-grey-color) !important;
+    fill: var(--theme-staking-stake-pool-grey-color) !important;
+    opacity: 1 !important;
+  }
+}
