--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -86,6 +86,30 @@
       cursor: pointer;
     }
   }
+
+  .sandClockTooltip {
+    :global {
+      .SimpleBubble_bubble {
+        margin-bottom: -20px !important;
+      }
+    }
+
+    .sandClock {
+      background-color: var(--theme-staking-stake-pool-grey-bg-color);
+      height: 16px;
+      width: 23px;
+
+      svg {
+        height: 8px;
+        width: 5px;
+        g {
+          path {
+            fill: var(--theme-staking-stake-pool-grey-color);
+          }
+        }
+      }
+    }
+  }
 }
 
 .container {
@@ -100,6 +124,10 @@
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.greyColorBand {
+  background: var(--theme-staking-stake-pool-grey-color);
 }
 
 .homepage {
@@ -365,7 +393,7 @@
 }
 
 .defaultColor {
-  span {
+  .defaultColorContent {
     background: var(
       --theme-staking-stake-pool-tooltip-neutral-background-color
     );
