--- a/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
@@ -108,6 +108,29 @@
   width: 100%;
 }
 
+.sandClock {
+  height: 19px;
+  margin: 0 auto;
+  padding-top: 4px;
+  width: 10px;
+
+  path {
+    fill: var(--theme-staking-stake-pool-grey-color) !important;
+    opacity: 1 !important;
+  }
+}
+
+.greyColorBand {
+  background: var(--theme-staking-stake-pool-grey-color);
+  border-radius: 0 0 4px 4px;
+  bottom: 0;
+  display: block;
+  height: 5px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+
 // .isSelected,
 // .isNextSelected {
 //   .colorBand,
