[DDW-325] Small UI fixes

--- a/source/renderer/app/components/wallet/layouts/WalletWithNavigation.scss
+++ b/source/renderer/app/components/wallet/layouts/WalletWithNavigation.scss
@@ -13,7 +13,8 @@
 
 .page {
   height: calc(100% - 50px);
-  overflow: overlay;
+  overflow-x: hidden;
+  overflow-y: overlay;
   position: relative;
 }
 
