[DDW-262] Tooltip promoting password managers

--- a/source/renderer/app/components/wallet/WalletCreateDialog.scss
+++ b/source/renderer/app/components/wallet/WalletCreateDialog.scss
@@ -63,6 +63,7 @@
         border-radius: 10px;
         height: 87px;
         left: 125px;
+        line-height: 1.2;
         top: 54px;
         white-space: normal;
         width: 291.5px;
