[DDW-262] Tooltip promoting password managers

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -18,6 +18,7 @@
     .newPassword,
     .currentPassword {
       margin-bottom: 20px;
+      width: 100%;
     }
 
     .passwordInstructions {
@@ -70,7 +71,7 @@
         width: 14px;
 
         path {
-          fill: var(--theme-input-icon-background-color);
+          fill: var(--theme-input-label-color);
         }
       }
 
