--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
@@ -1,3 +1,4 @@
+@import '../../../themes/mixins/error-message';
 .walletToLabel {
   color: var(--theme-staking-redeemItnRewards-text-color);
   font-family: var(--font-medium);
@@ -67,4 +68,9 @@
       opacity: 0.5;
     }
   }
+}
+.error {
+  @include error-message;
+  margin-bottom: 1rem;
+  text-align: center;
 }
