[DDW-344] Themes - progress

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
@@ -51,7 +51,7 @@
   @extend .section;
   @extend .sectionHalf;
   @extend .sectionAccent;
-  @extend .sectionOpacity;
+  // @extend .sectionOpacity;
 }
 .finalTotal {
   @extend .section;
