[DDW-344] Minor adjustment

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -13,6 +13,7 @@
       }
     }
     b {
+      color: var(--theme-dialog-fullsize-text-highlight-color);
       font-family: var(--font-bold);
     }
   }
