--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
@@ -1,5 +1,5 @@
+@import '../../../themes/mixins/error-message';
 .walletToLabel {
-  color: var(--theme-staking-redeemItnRewards-text-color);
   font-family: var(--font-medium);
   font-size: 16px;
   font-stretch: normal;
@@ -12,7 +12,6 @@
   width: 20px;
 }
 .section {
-  color: var(--theme-staking-redeemItnRewards-text-color);
   font-family: var(--font-regular);
   font-size: 16px;
   line-height: 1.38;
@@ -52,7 +51,7 @@
   @extend .section;
   @extend .sectionHalf;
   @extend .sectionAccent;
-  @extend .sectionOpacity;
+  // @extend .sectionOpacity;
 }
 .finalTotal {
   @extend .section;
@@ -67,4 +66,9 @@
       opacity: 0.5;
     }
   }
+}
+.error {
+  @include error-message;
+  margin-bottom: 1rem;
+  text-align: center;
 }
