[DDW-345] Fix Ada Redemption styling issues

--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -60,6 +60,7 @@
       color: var(--theme-dialog-fullsize-text-color);
     }
     // Text color highlight
+    .SimpleAutocomplete_autocompleteContent input,
     .SimpleOptions_option,
     .SimpleLink_root {
       color: var(--theme-dialog-fullsize-text-highlight-color);
